--- a/ff.resource_editor/ui/main_window.xaml
+++ b/ff.resource_editor/ui/main_window.xaml
@@ -9,62 +9,69 @@
     xmlns:model="clr-namespace:ff.resource_editor.model"
     d:DataContext="{d:DesignInstance Type=model:main_vm, IsDesignTimeCreatable=True}"
     DataContext="{Binding view_model, RelativeSource={RelativeSource Mode=Self}}"
+    Closing="on_closing"
     mc:Ignorable="d"
     d:Height="450"
     d:Width="800">
-    <Window.Resources>
-        <convert:window_title_converter x:Key="window_title_converter" />
-    </Window.Resources>
-    <Window.Title>
-        <MultiBinding Converter="{StaticResource window_title_converter}" ConverterParameter="Resource Editor">
-            <Binding Path="project" />
-            <Binding Path="project.file" />
-            <Binding Path="project.dirty" />
-        </MultiBinding>
-    </Window.Title>
+  <Window.Resources>
+    <convert:window_title_converter x:Key="window_title_converter" />
+  </Window.Resources>
+  <Window.Title>
+    <MultiBinding Converter="{StaticResource window_title_converter}" ConverterParameter="Resource Editor">
+      <Binding Path="project" />
+      <Binding Path="project.file" />
+      <Binding Path="project.dirty" />
+    </MultiBinding>
+  </Window.Title>
+  <Grid>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="300"/>
+      <ColumnDefinition/>
+    </Grid.ColumnDefinitions>
     <Grid Background="{DynamicResource {x:Static SystemColors.ControlBrushKey}}">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="256" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="*"/>
-            </Grid.RowDefinitions>
-            <Border BorderBrush="{DynamicResource ToolBarMenuBorder}" BorderThickness="0,0,0,1" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}">
-                <ToolBarTray IsLocked="True" Background="{DynamicResource {x:Static SystemColors.MenuBrushKey}}">
-                    <ToolBar Background="Transparent">
-                        <Button ToolTip="New (Ctrl+N)" Command="{Binding new_command}">
-                            <Rectangle Width="16" Height="16" Fill="{StaticResource new_icon}" />
-                        </Button>
-                        <Button ToolTip="Open (Ctrl+S)" Command="{Binding open_command}">
-                            <Rectangle Width="16" Height="16" Fill="{StaticResource open_icon}" />
-                        </Button>
-                        <Button ToolTip="Save (Ctrl+S)" Command="{Binding save_command}">
-                            <Rectangle Width="16" Height="16" Fill="{StaticResource save_icon}" />
-                        </Button>
-                        <Separator />
-                        <Button ToolTip="Add source file (Insert)" Command="{Binding add_source_command}">
-                            <Rectangle Width="16" Height="16" Fill="{StaticResource add_icon}" />
-                        </Button>
-                        <Button ToolTip="Remove source file (Delete)" Command="{Binding remove_source_command}">
-                            <Rectangle Width="16" Height="16" Fill="{StaticResource remove_icon}" />
-                        </Button>
-                    </ToolBar>
-                </ToolBarTray>
-            </Border>
-            <Grid Grid.Row="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="128" />
-                    <RowDefinition Height="*" />
-                </Grid.RowDefinitions>
-                <ListBox Grid.Row="0" Margin="4" ItemsSource="{Binding project.sources}" d:ItemsSource="{d:SampleData}" />
-                <TreeView Grid.Row="1" Margin="4" d:ItemsSource="{d:SampleData}" />
-            </Grid>
-        </Grid>
-        <Grid Grid.Column="1">
-            <Border Background="Black"/>
-        </Grid>
+      <Grid.RowDefinitions>
+        <RowDefinition Height="Auto"/>
+        <RowDefinition/>
+      </Grid.RowDefinitions>
+      <ToolBarTray IsLocked="True" Background="{x:Null}">
+        <ToolBar Background="{x:Null}">
+          <Button HorizontalAlignment="Left" VerticalAlignment="Top" Command="{Binding new_command}">
+            <Rectangle Height="16" Width="16" Fill="{DynamicResource new_icon}"/>
+          </Button>
+          <Button Command="{Binding open_command}">
+            <Rectangle Height="16" Width="16" Fill="{DynamicResource open_icon}"/>
+          </Button>
+          <Button Command="{Binding save_command}">
+            <Rectangle Height="16" Width="16" Fill="{DynamicResource save_icon}"/>
+          </Button>
+          <Button Command="{Binding save_as_command}">
+            <Rectangle Height="16" Width="16" Fill="{DynamicResource save_as_icon}"/>
+          </Button>
+          <Separator/>
+          <Button Command="{Binding add_source_command}">
+            <Rectangle Height="16" Width="16" Fill="{DynamicResource add_icon}"/>
+          </Button>
+          <Button Command="{Binding remove_source_command}" CommandParameter="{Binding SelectedItems, ElementName=source_file_list}">
+            <Rectangle Height="16" Width="16" Fill="{DynamicResource remove_icon}"/>
+          </Button>
+        </ToolBar>
+      </ToolBarTray>
+      <Grid Grid.Row="1">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="200"/>
+          <RowDefinition/>
+        </Grid.RowDefinitions>
+        <ListView x:Name="source_file_list" Margin="4" ItemsSource="{Binding project.sources}" SelectionMode="Extended">
+          <ListView.View>
+            <GridView AllowsColumnReorder="False">
+              <GridViewColumn Header="Name" Width="80" DisplayMemberBinding="{Binding name}" />
+              <GridViewColumn Header="Path" DisplayMemberBinding="{Binding path}" />
+            </GridView>
+          </ListView.View>
+        </ListView>
+        <TreeView Grid.Row="1" Margin="4" ItemsSource="{Binding project.sources}" />
+      </Grid>
     </Grid>
+    <Border Grid.Column="1" Background="{DynamicResource {x:Static SystemColors.ControlDarkBrushKey}}"/>
+  </Grid>
 </Window>
