--- a/ff.resource_editor/ui/main_window.xaml
+++ b/ff.resource_editor/ui/main_window.xaml
@@ -197,7 +197,7 @@
         <ListView.View>
           <GridView AllowsColumnReorder="False">
             <GridViewColumn Header="Name" Width="80" DisplayMemberBinding="{Binding name}" />
-            <GridViewColumn Header="Type" DisplayMemberBinding="{Binding type}" />
+            <GridViewColumn Header="Type" DisplayMemberBinding="{Binding type_name}" />
           </GridView>
         </ListView.View>
       </ListView>
