--- a/ff.resource_editor/ui/custom_control_resources.xaml
+++ b/ff.resource_editor/ui/custom_control_resources.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ui="clr-namespace:ff.resource_editor.ui"
     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2">
 
   <SolidColorBrush x:Key="ToolBarButtonHover" Color="#210080FF"/>
@@ -197,5 +198,49 @@
   <Style TargetType="{x:Type ToolBarTray}" BasedOn="{StaticResource {x:Type ToolBarTray}}">
     <Setter Property="Background" Value="{x:Null}" />
     <Setter Property="IsLocked" Value="True" />
+  </Style>
+
+  <Style x:Key="focus_visual_inner">
+    <Setter Property="Control.Template">
+      <Setter.Value>
+        <ControlTemplate>
+          <Rectangle Margin="2" StrokeDashArray="1 2" Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}" SnapsToDevicePixels="true" StrokeThickness="1"/>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
+  </Style>
+
+  <Style x:Key="toolbar_button_style" TargetType="{x:Type Button}">
+    <Setter Property="FocusVisualStyle" Value="{StaticResource focus_visual_inner}"/>
+    <Setter Property="SnapsToDevicePixels" Value="True" />
+    <Setter Property="Template">
+      <Setter.Value>
+        <ControlTemplate TargetType="{x:Type Button}">
+          <Grid Background="Transparent">
+            <Border x:Name="border" Background="Transparent" />
+            <StackPanel Orientation="Horizontal" Margin="2">
+              <Rectangle x:Name="icon_rect" Width="24" Height="24" StrokeThickness="0" Fill="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(ui:properties.Icon)}" />
+              <ContentPresenter x:Name="contentPresenter" Focusable="False" VerticalAlignment="Center" />
+            </StackPanel>
+          </Grid>
+          <ControlTemplate.Triggers>
+            <Trigger Property="IsMouseOver" Value="true">
+              <Setter Property="Background" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+              <Setter Property="Opacity" TargetName="border" Value="0.25"/>
+              <Setter Property="Fill" TargetName="icon_rect" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(ui:properties.IconHot)}"/>
+            </Trigger>
+            <Trigger Property="IsPressed" Value="true">
+              <Setter Property="Background" TargetName="border" Value="{DynamicResource {x:Static SystemColors.HighlightBrushKey}}"/>
+              <Setter Property="Opacity" TargetName="border" Value="1"/>
+              <Setter Property="Fill" TargetName="icon_rect" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(ui:properties.IconHot)}"/>
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="false">
+              <Setter Property="Background" TargetName="border" Value="Transparent"/>
+              <Setter Property="Fill" TargetName="icon_rect" Value="{Binding RelativeSource={RelativeSource Mode=TemplatedParent}, Path=(ui:properties.IconGray)}"/>
+            </Trigger>
+          </ControlTemplate.Triggers>
+        </ControlTemplate>
+      </Setter.Value>
+    </Setter>
   </Style>
 </ResourceDictionary>
